tests/positive/ownership/basic_move.tx
class Data {
    value = 0;
}

function consume(d: Data) {
    print(d.value);
}

function main() {
    let d1 = new Data();
    d1.value = 42;
    consume(d1);
    // d1 is moved here, we successfully transferred ownership!
    
    let d2 = new Data();
    let d3 = d2; // moved
    d3.value = 10;
    print(d3.value);
}
