tests/negative/ownership/move_from_object_field.tx
// Description: Cannot use object after moving it via assignment
// EXPECTED: COMPILE_ERROR

class Data {
    val: int32;
    constructor() { this.val = 10; }
}

class Wrapper {
    data: Data;
    constructor(d: Data) { this.data = d; }
}

function main() {
    let d = new Data();
    let w = new Wrapper(d);  // d moved into Wrapper constructor (last use)
    
    // ERROR: d was moved into the constructor
    print(d.val);
}
